# coreutils-rust

./: Cargo.toml  Dockerfile  README.md  base64_basenc.rs  basename.rs  basename_safe.rs  bench_md5.rs  bench_sha1.rs  bench_sha224.rs  bench_sha256.rs  bench_sha384.rs  bench_sha512.rs  build.rs  cat.rs  chcon.rs  chgrp.rs  chmod.rs  chown.rs  chroot.rs  comm.rs  cp.rs  csplit.rs  cut.rs  date.rs  dd.rs  dependencies.dot  dependencies.json  df.rs  diff.py  dircolors.rs  dirname.rs  du.rs  echo.rs  env.rs  expand.rs  expr.rs  false.rs  fmt.rs  fold.rs  getlimits.rs  (+69 more)
.github/workflows/: docker-build-publish.yml
FunctionalTest/: FunctionalTest.sh  README.md
src/gnulib_tests/: ioctl.rs  localename.rs  strerror_r.rs  timespec_add.rs  timespec_sub.rs  tmpdir.rs  vma_iter.rs
src/gnulib_tests/glthread/: thread.rs
src/lib/: acl_errno_valid.rs  acl_internal.rs  allocator.rs  areadlink.rs  areadlink_with_size.rs  areadlinkat.rs  argmatch.rs  argv_iter.rs  asnprintf.rs  asprintf.rs  backup_find.rs  backup_rename.rs  backupfile.rs  base32.rs  base64.rs  basename.rs  basename_lgpl.rs  binary_io.rs  bitrotate.rs  buffer_lcm.rs  c_ctype.rs  c_strcasecmp.rs  c_strncasecmp.rs  c_strtod.rs  c_strtold.rs  canon_host.rs  canonicalize.rs  careadlinkat.rs  chdir_long.rs  chmodat.rs  chownat.rs  cl_strtod.rs  cl_strtold.rs  cloexec.rs  close_stream.rs  closein.rs  closeout.rs  copy_acl.rs  count_leading_zeros.rs  creat_safer.rs  (+203 more)
src/lib/glthread/: lock.rs
src/lib/malloc/: dynarray_at_failure.rs  dynarray_emplace_enlarge.rs  dynarray_finalize.rs  dynarray_resize.rs  dynarray_resize_clear.rs  scratch_buffer_dupfree.rs  scratch_buffer_grow.rs  scratch_buffer_grow_preserve.rs  scratch_buffer_set_array_size.rs
src/lib/unistr/: u8_mbtoucr.rs  u8_uctomb.rs  u8_uctomb_aux.rs
src/lib/uniwidth/: width.rs
src/src/: chown_core.rs  cksum_cksum.rs  cksum_crctab.rs  copy.rs  cp_hash.rs  expand_common.rs  find_mount_point.rs  force_link.rs  group_list.rs  ls_dir.rs  ls_ls.rs  ls_vdir.rs  operand2sig.rs  prog_fprintf.rs  relpath.rs  remove.rs  selinux.rs  set_fields.rs  sum_sum.rs  uname_arch.rs  uname_uname.rs  version.rs
src/src/blake2/: b2sum_b2sum.rs  cksum_blake2b_ref.rs
